# Custom-3d-rendering-engine

./: README.md
backend/: CMakeLists.txt  gesture_detector.cpp
frontend/: engine.js  index.html  main.js  style.css
server/: package-lock.json  package.json  server.js
